# Manhunt2FSBanker

./: .gitattributes  CMakeLists.txt  README.md  binio.h  byteswap.h  main.cpp  manhunt2fsbanker_version.h.in  vcpkg.json
File/: CRC32.cpp  CRC32.h  ContextMapBin.cpp  ContextMapBin.h  Dir.cpp  Dir.h  DirNames.cpp  DirNames.h  FileContainer.cpp  FileContainer.h  Fsb.cpp  Fsb.h  SpeechLst.cpp  SpeechLst.h  Wav.cpp  Wav.h  WavCodec.cpp  WavCodec.h  YAMLHelpers.cpp  YAMLHelpers.h
tests/: CMakeLists.txt  ContextMapBin_tests.cpp  SpeechLst_tests.cpp  utils.h
tests/Samples/: speech.lst
